Pagina de contato adicionada

--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -13,4 +13,5 @@
 @import "partials/videoGrid";
 @import "partials/addTesteFinalizado";
 @import "partials/convidarTesters";
+@import "partials/contato";
 @import "partials/mediasqueries";
