--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url("https://use.typekit.net/fck0yop.css");
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans:600|Heebo:400,500,700&display=swap");
+@import url("https://use.typekit.net/fck0yop.css");
 * {
   margin: 0;
   padding: 0;
@@ -1275,6 +1276,94 @@ div#addTesteFinalizadoContainer div#addTesteFinalizado div[role=button] a {
   align-items: center;
 }
 
+main.contato {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+main.contato section {
+  margin-top: 4.2rem;
+  width: 100%;
+  padding-right: 5%;
+  margin-bottom: 5.2rem;
+}
+main.contato section h1 {
+  color: #02011D;
+  font-size: 4.8rem;
+  font-weight: 700;
+  margin-bottom: 4.2rem;
+}
+main.contato section form {
+  width: 100%;
+}
+main.contato section form div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 3.2rem;
+}
+main.contato section form div label {
+  color: #3B1AE3;
+  margin-bottom: 1rem;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+main.contato section form div input[type=email],
+main.contato section form div input[type=text] {
+  width: 100%;
+  font-size: 1.6rem;
+  border: 1px solid #3B1AE3;
+  border-radius: 6px;
+  padding: 1rem 1.6rem;
+}
+main.contato section form div textarea {
+  width: 100%;
+  font-size: 1.6rem;
+  font-family: "museo-sans", sans-serif;
+  border: 1px solid #3B1AE3;
+  border-radius: 6px;
+  padding: 1rem 1.6rem;
+}
+main.contato section form input[type=submit] {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  width: 28rem;
+  height: 5rem;
+  font-size: 2rem;
+  color: white;
+  background-color: #3B1AE3;
+  font-weight: 700;
+  border-radius: 5.1rem;
+  border: 0px;
+}
+main.contato figure {
+  width: 100%;
+  margin-top: 3.2rem;
+  margin-bottom: 5.2rem;
+}
+main.contato figure img {
+  width: 100%;
+  height: auto;
+}
+
+@media (max-width: 540px) {
+  main.contato {
+    flex-direction: column;
+    width: 90%;
+  }
+  main.contato section {
+    padding: 0;
+  }
+  main.contato section h1 {
+    font-size: 4.3rem;
+  }
+}
 @media (max-width: 980px) {
   h2 {
     margin: 0 2rem 3rem !important;
